--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
+# Dependencies
 node_modules/
+
+# Build output
 dist/
-coverage/
+
+# Logs
 *.log
+npm-debug.log*
+
+# OS
 .DS_Store
+
+# IDE
 .idea/
 .vscode/
-.envrc
+*.swp
+*.swo
+
+# Environment
+.env
+.env.*
+!.env.example
