--- a/package.json
+++ b/package.json
@@ -1,40 +1,45 @@
 {
-  "name": "@built-fast/vector-pro-sdk",
-  "version": "1.0.0",
-  "description": "Node.js SDK for Vector Pro API",
-  "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "name": "vector-pro-sdk",
+  "version": "0.1.0",
+  "description": "Node.js SDK for the Vector Pro API by BuiltFast",
+  "homepage": "https://builtfast.dev/oss/vector-pro-sdk-node/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/built-fast/vector-pro-sdk-node"
+  },
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
     }
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "build": "tsup src/index.ts --format cjs,esm --dts --clean",
     "prepublishOnly": "npm run build"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "keywords": [
+    "vector",
     "vector-pro",
     "builtfast",
+    "wordpress",
     "hosting",
     "api",
     "sdk"
   ],
-  "author": "",
+  "author": "BuiltFast (https://builtfast.dev)",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^22.0.0",
-    "typescript": "^5.7.0",
-    "vitest": "^3.0.0"
+    "tsup": "^8.0.0",
+    "typescript": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
